<resources>
    <string name="app_name">MovieDetails</string>
    <string name="click_on_me_to_see_movie_details">Click on me to see Movie details!</string>
    <string name="movie_details">Movie details!</string>
    <string name="back">Back</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="_13">13+</string>
    <string name="avengers_background">avengers_background</string>
    <string name="action_adventure_fantasy">Action,adventure,fantasy</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="after_the_devastating_events_of_avengers_infinity_war_the_universe_is_in_ruins_with_the_help_of_remaining_allies_the_avengers_assemble_once_more_in_order_to_reverse_thanos_actions_and_restore_balance_to_the_universe">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert\nDowney Jr.</string>
    <string name="chris_evans">Chris\nEvans</string>
    <string name="mark_ruffalo">Mark\nRuffalo</string>
    <string name="chris_hemsworth">Chris\nHemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="label_avengers_end_game">Avengers:End Game</string>
    <string name="_137_min">137 MIN</string>
    <string name="total_reviews">%s Reviews</string>
    <string name="movie_duration">%s MIN</string>
    <string name="pg_rating">%s+</string>
    <string name="empty_movie_text">empty_movie_text</string>
</resources>