<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_promo_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="18dp"
    android:clickable="true"
    android:focusable="true"
    android:maxWidth="170dp"
    app:cardCornerRadius="6dp"
    app:strokeColor="#803B3B4D"
    app:strokeWidth="2dp"
    tools:layout_marginTop="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/ic_gradient_movie_item_background"
        android:paddingBottom="@dimen/spacing_low">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avengers" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster_background_linear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/poster"
            app:layout_constraintEnd_toEndOf="@id/poster"
            app:layout_constraintStart_toStartOf="@id/poster"
            app:layout_constraintTop_toTopOf="@id/poster"
            app:srcCompat="@drawable/icon_background"
            tools:viewBindingIgnore="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/minimum_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="@dimen/spacing_low"
            android:textAppearance="@style/pegiInfo"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toStartOf="@id/ic_like"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_rectangle"
            tools:viewBindingIgnore="true"
            tools:text="@string/_13"
           />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/minimum_age"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_like" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="182dp"
            android:textAppearance="@style/genre"
            app:layout_constraintStart_toStartOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/minimum_age"
            tools:text="@string/action_adventure_drama" />

        <RatingBar
            android:id="@+id/poster_ratingBar"
            style="@style/label_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_low"
            tools:numStars="5"
            app:layout_constraintStart_toStartOf="@id/genre"
            app:layout_constraintTop_toBottomOf="@id/genre">

        </RatingBar>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/label_review"
            app:layout_constraintStart_toEndOf="@id/poster_ratingBar"
            app:layout_constraintTop_toTopOf="@+id/poster_ratingBar"
            app:layout_constraintBottom_toBottomOf="@+id/poster_ratingBar"
            tools:text="@string/_125_reviews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:textAppearance="@style/label_movie_name"
            app:layout_constraintStart_toStartOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/poster"
            tools:text="@string/label_avengers_end_game" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/runtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/label_movie_duration"
            app:layout_constraintStart_toStartOf="@id/movie_title"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            tools:text="@string/_137_min" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>